changes to project to fix mobile layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -292,6 +292,14 @@ footer {
 /* ================================ */
 /* ==== MEDIA QUERIES ==== */
 @media (max-width: 450px) {
+  .individual-project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 85%;
+  }
+
   .flex-s {
     display: flex;
     flex-direction: column;
